# ros2-macos-clion-bootstrap

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  print_environment.sh
src/: sample_node.cpp
